@@ -21,9 +21,12 @@
 	  src/SDCCsymt.h,
 	  src/SDCCsymt.c,
 	  support/regression/tests/p99-conformance.c:
-	  Implement RFE #2538: Qualifiers in array parameters (ISO C99).
+	  Partially implement RFE #2538: const and volatile in array parameters.
 	* support/regression/tests/gcc-torture-execute-pr51581-1.c:
 	  Fix for test-host.
+	* src/SDCC.y,
+	  support/regression/tests/p99-conformance.c:
+	  RFE #2538: qualifiers in array parameters (ISO C99).
 
 2017-09-25 Philipp Klaus Krause <pkk AT spth.de>
 
